# multipath

./: Cargo.toml  LICENCE  README.md
.github/workflows/: cargo_checks.yml
src/: lib.rs  tests.rs
