[package]
name = "multipath"
version = "1.0.0"
authors = ["Jimskapt <rami.programmer@gmail.com>"]
description = "A library to split file path, like `/home/{user,admin}/file.txt`."
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Jimskapt/multipath"
keywords = ["multiple", "path", "pathbuf", "split", "vec"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
